fixed alignment

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,7 @@
 
   .message {
     width: 400px;
-    padding-top: 115px;
+    padding-top: 80px;
   }
 
   h1 {
@@ -57,7 +57,7 @@
     height: 240px;
 
     .message {
-      padding-top: 50px;
+      padding-top: 35px;
     }
 
     h1 {
